# UEhub

./: -a uehub  .dependency-cruiser.js  .gitignore  .vercelignore  CLEAR_CACHE_NOW.js  COMPLETE_DEWALT_DRILL_SOLUTION.md  COMPLETE_FIX.md  COMPLETE_TEST_RESULTS.md  COMPLETE_WORKING_SOLUTION.js  DELETE_DEWALT.sql  DEPLOYMENT_GUIDE.txt  DEPLOY_BACKEND_NOW.ps1  DEPLOY_FRONTEND_FIX.md  DEWALT_DRILL_KILLER.js  DEWALT_DRILL_KILLER_COMPLETE.js  DIRECT_DATABASE_FIX.sql  EMERGENCY_DATABASE_INIT.md  EMERGENCY_FIX_500_ERROR.md  EMERGENCY_INVENTORY_FIX.md  FINAL_LOGIN_SOLUTION.md  FINAL_LOGIN_SUCCESS_GUIDE.md  FINAL_NUCLEAR_LOGIN_FIX.md  FINAL_SOLUTION.md  FINAL_STATUS_REPORT.md  FINAL_TEST_SCRIPT.js  FINAL_WORKING_SOLUTION.js  FIX_API_NOW.md  FLY_IO_FIX_COMMANDS.md  FORCE_REACT_UPDATE.js  IMMEDIATE_WORKING_SOLUTION.js  INVENTORY_FIX_INSTRUCTIONS.md  LOGIN_SUCCESS_GUIDE.md  MANUAL_DEPLOY_STEPS.md  Makefile  NEON_DATABASE_FIX.md  NUCLEAR_DEWALT_KILLER.js  PROXY_DEBUG_STEPS.md  README.md  SENTRY_SETUP.md  ULTIMATE_CACHE_KILLER.js  (+46 more)
.do/: app.yaml
backend/: .env.dev  Dockerfile  README.md  alembic.ini  clear_inventory.py  create_superadmin.py  create_tables.py  env.example  pyproject.toml  requirements.txt  simple_server.py  start_dev.py  test_api.py  test_simple.py  working_server.py
backend/alembic/: env.py
backend/alembic/versions/: 20250906_0001_initial_auth_tables.py  20250906_0002_inventory_tables.py  20250922_0001_timeclock_tables.py  20250922_0003_add_user_inventory_relationship.py  20250922_0004_add_timeclock_tables.py
backend/app/: __init__.py  api.py  test_router.py
backend/app/adapters/: cache_dummy.py  cache_redis.py  database_neon.py  mail_console.py  pdf_weasyprint.py  queue_dummy.py  storage_local.py  webhook_http.py
backend/app/core/: __init__.py  container.py  db.py  events.py  health.py  interfaces.py  security.py  sentry.py  settings.py
backend/app/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/scripts/: generate_sdk.py  seed.py  setup_neon.py
(+67 files in other folders)
